# MyuPrototype

./: .gitignore.txt  CMakeLists.txt  README.md  main.cpp  resources.qrc
ASIO/: CMakeLists.txt  asio.cpp  asio.h  asiodrivers.cpp
Backend/: asiofunctions.cpp  asiofunctions.h  asiorunner.cpp  asiorunner.h  asiothread.cpp  asiothread.h  config.cpp  configs.cpp  configs.h  livedata.cpp  livedata.h  maincontroller.cpp  maincontroller.h  soundthread.cpp  soundthread.h
Backend/Audio/: wavfile.cpp  wavfile.h
Backend/Layer/: clicklayer.cpp  clicklayer.h  gainlayer.cpp  gainlayer.h  layer.cpp  layer.h  vst3layer.cpp  vst3layer.h
Backend/Processor/: processerthread.cpp  processerthread.h
Clicks/: default.txt
Frontend/: MainWindow.qml  MainWindowFooter.qml  SettingsWindow.qml  Style.qml
Frontend/Components/: LayerComponent.qml  LayerDelegate.qml  LayerLayout.qml  Metronome.qml  SettingsLayout.qml  ToolBarButton.qml  qmldir.txt
Frontend/Pages/: FreePlay.qml  qmldir.txt
Frontend/Windows/: ClickWindow.qml  GainWindow.qml  LayerWindow.qml  LayerWindowHeader.qml  MainWindow.qml  MainWindowFooter.qml  MainWindowHeader.qml  SettingsWindow.qml
